tests/error/misc_errors/panic_msg_not_str.err
Error: Expected a string literal (at $FILE:7:10)
  | 
5 | @compile_guppy
6 | def foo(x: int) -> None:
7 |     panic((), x)
  |           ^^ Expected a string literal

Guppy compilation failed due to 1 previous error
